--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                <div class="col-xl-6 col-lg-6 col-md-6 ">
                    <div class="text-bg">
                      <h1>JONNATHAN</h1>
+                     <h1>MATEO</h1>
                      <span>Free Multipurpose <br>
 Responsive Landing<br> Page For </span>
                      <strong>Classified Ads</strong>
