--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@
             <div class="row d_flex">
                <div class="col-xl-6 col-lg-6 col-md-6 ">
                    <div class="text-bg">
-                     <h1>JONNATHAN</h1>
-                     <h1>MATEO</h1>
-                     <span>Free Multipurpose <br>
-Responsive Landing<br> Page For </span>
-                     <strong>Classified Ads</strong>
-                     <a  href="#">Read More</a>
+                     <h1>Code Graph</h1>
+                     <span>Desarrollamos soluciones tecnológicas <br>
+innovadoras para impulsar el crecimiento y la <br> transformación digital de las empresas </span>
+                     <strong></strong>
+                     <a  href="#">INICIO</a>
                   </div>
                </div>
                <div class="col-xl-6 col-lg-6 col-md-6 padding_lert2">
