Frase y direcion al pie de la paguina

--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@ innovadoras para impulsar el crecimiento y la <br> transformación digital de la
                <div class="row">
                   <div class="col-md-8 offset-md-2">
                      <div class="cont">
-                        <h3>Free Multipurpose <br>
-                           Responsive Landing Page 2019
+                        <h3>"Impulsamos sueños <br>
+                           digitales hacia grandes logros"
                         </h3>
-                        <p>Modern lighting fast & easily Customizable</p>
-                        <a class="read_more" href="#">Get A Quote</a>
+                        <p>Tu socio hacia la innovación</p>
+                        <a class="read_more" href="#">INICIO</a>
                      </div>
                   </div>
                </div>
@@ -334,7 +334,7 @@ innovadoras para impulsar el crecimiento y la <br> transformación digital de la
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2019 All Rights Reserved. Design by <a href="https://html.design/"> Free Html Templates</a></p>
+                        <p>codegraph102@gmail.com | Republica y<a href="https://html.design/"> Presidente la roca</a></p>
                      </div>
                   </div>
                </div>
