--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                         <div class="collapse navbar-collapse" id="navbarsExample04">
                            <ul class="navbar-nav mr-auto">
                                <li class="login_btn" class="nav-item" href="#">
-                             Login
+                             Iniciar Sesión
                              </li>
                                 <li class="nav-item">
-                              <a class="nav-link" href="#">Sing Up</a>
+                              <a class="nav-link" href="#">Registrarse</a>
                              </li>
                            </ul>
                         </div>
@@ -135,9 +135,9 @@ innovadoras para impulsar el crecimiento y la <br> transformación digital de la
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <span>Why choose ads</span>
-                     <h2>ONE OF THE BEST Classified</h2>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem  ere, content here', making it</p>
+                     <span>Nuestros</span>
+                     <h2>MEJORES PRODUCTOS</h2>
+                     <p>Nuestros productos tecnológicos están diseñados con los más altos estándares de calidad, ofreciendo confiabilidad y rendimiento en cada componente. Nos esforzamos por brindar soluciones innovadoras y duraderas que superen las expectativas de nuestros clientes.</p>
                   </div>
                </div>
             </div>
@@ -148,22 +148,22 @@ innovadoras para impulsar el crecimiento y la <br> transformación digital de la
                         <div class="col-xl-4 col-lg-4 col-md-4 margin_bott">
                            <div class="classified_box">
                               <figure><img src="images/work_img1.jpg" alt="#"/></figure>
-                              <h3> FRONT END MULTICURRENCY </h3>
-                              <p>It is a long established fact that a reader will  opposed to using 'Content here, content here', making it</p>
+                              <h3> LAPTOPS Y COMPONENTES </h3>
+                              <p>Variedad de productos como memorias RAM, discos sólidos, tarjetas de video, etc. Todos de la mejor calidad para garantizar el correcto funcionamiento de tus equipos acorde a tus necesidades.</p>
                            </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 margin_bott">
                            <div class="classified_box">
                               <figure><img src="images/work_img2.jpg" alt="#"/></figure>
-                              <h3>MOST INTELLIGENT SEARCH SYSTEM</h3>
-                              <p>It is a long established fact that a reader will  opposed to using 'Content here, content here', making it</p>
+                              <h3>SERVICIOS EN LA NUBE</h3>
+                              <p>Ofrecemos apoyo en soporte de servicios en la nube para mejorar la escalabilidad de su proyecto. Ofrecemos distintos servicios web o de almacenamiento con las mejor técnicas de seguridad.</p>
                            </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4">
                            <div class="classified_box">
                               <figure><img src="images/work_img3.jpg" alt="#"/></figure>
-                              <h3> FRONT END MULTICURRENCY </h3>
-                              <p>It is a long established fact that a reader will  opposed to using 'Content here, content here', making it</p>
+                              <h3> SETUP GAMER </h3>
+                              <p>Si buscas no solo potencia, sino también estilo, estás en el lugar indicado. Te ofrecemos las mejores recomendaciones para armar tu PC, añadiendo un plus de diseño y personalidad.</p>
                            </div>
                         </div>
                      </div>
@@ -182,29 +182,29 @@ innovadoras para impulsar el crecimiento y la <br> transformación digital de la
                <div class="col-md-6">
                   <div class="contact_box">
                      <div class="titlepage">
-                        <span>Contact Us</span>
-                        <h2>Let’s talk for ads</h2>
+                        <span>Contáctanos</span>
+                        <h2>Al servicio de la comunidad</h2>
                      </div>   
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem  ere, content here', making itIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem  ere, content here', making it</p>
+                     <p>¿Listo para llevar tus proyectos tecnológicos al siguiente nivel? Contáctanos y descubre cómo nuestros expertos pueden ayudarte a encontrar soluciones personalizadas que se adapten a tus necesidades. Estamos aquí para guiarte en cada paso hacia el éxito. ¡Hablemos hoy mismo!</p>
                   </div>
                </div>
                <div class="col-md-6">
                   <form id="contact" class="main_form">
                      <div class="row">
                         <div class="col-md-12 ">
-                           <input class="contactus" placeholder="Name" type="type" name="Name"> 
+                           <input class="contactus" placeholder="Nombre" type="type" name="Name"> 
                         </div>
                         <div class="col-md-12">
-                           <input class="contactus" placeholder="Phone Number" type="type" name="Phone Number"> 
+                           <input class="contactus" placeholder="Teléfono" type="type" name="Phone Number"> 
                         </div>
                         <div class="col-md-12">
                            <input class="contactus" placeholder="Email" type="type" name="Email">                          
                         </div>
                         <div class="col-md-12">
-                           <textarea class="textarea" placeholder="Message" type="type" Message="Name">Message </textarea>
+                           <textarea class="textarea" placeholder="Mensaje" type="type" Message="Name">Mensaje </textarea>
                         </div>
                         <div class="col-sm-12">
-                           <button class="send_btn">Send</button>
+                           <button class="send_btn">Enviar</button>
                         </div>
                      </div>
                   </form>
