Poner comentarios de clientes imaginarios

--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@ innovadoras para impulsar el crecimiento y la <br> transformación digital de la
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Testimonial</h2>
-                     <p>when looking at its layout. The point of using Lorem  ere, content here', making it</p>
+                     <h2>Comentarios</h2>
+                     <p>Opiniones de clientes, sobre nuestros servicios</p>
                   </div>
                </div>
             </div>
@@ -242,13 +242,13 @@ innovadoras para impulsar el crecimiento y la <br> transformación digital de la
                                     <div class="col-xl-4 col-lg-4 col-md-12 margin_boot">
                                        <div class="test_box1">
                                           <figure><img src="images/tests.png" alt="#"/></figure>
-                                          <h4> be distracted </h4>
+                                          <h4> Juan Gómez </h4>
                                        </div>
                                     </div>
                                     <div class="col-xl-8 col-lg-8 col-md-12">
                                        <div class="test_box">
                                           <i><img src="images/te1.png" alt="#"/></i>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it </p>
+                                          <p>El equipo de soporte técnico de CodeGraph respondió a mi consulta en menos de 30 minutos. Solucionaron mi problema de inmediato. ¡Excelente servicio! </p>
                                           <i class="flot_right"><img src="images/te2.png" alt="#"/></i>
                                        </div>
                                     </div>
@@ -263,13 +263,13 @@ innovadoras para impulsar el crecimiento y la <br> transformación digital de la
                                     <div class="col-xl-4 col-lg-4 col-md-12 margin_boot">
                                        <div class="test_box1">
                                           <figure><img src="images/tests.png" alt="#"/></figure>
-                                          <h4> be distracted </h4>
+                                          <h4> Ana Torres </h4>
                                        </div>
                                     </div>
                                     <div class="col-xl-8 col-lg-8 col-md-12">
                                        <div class="test_box">
                                           <i><img src="images/te1.png" alt="#"/></i>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it </p>
+                                          <p>Me impresionó el nivel de conocimiento del personal técnico. No solo resolvieron mi problema, sino que también me dieron consejos para evitarlo en el futuro </p>
                                           <i class="flot_right"><img src="images/te2.png" alt="#"/></i>
                                        </div>
                                     </div>
@@ -284,13 +284,13 @@ innovadoras para impulsar el crecimiento y la <br> transformación digital de la
                                     <div class="col-xl-4 col-lg-4 col-md-12 margin_boot">
                                        <div class="test_box1">
                                           <figure><img src="images/tests.png" alt="#"/></figure>
-                                          <h4> be distracted </h4>
+                                          <h4> Diego Morales </h4>
                                        </div>
                                     </div>
                                     <div class="col-xl-8 col-lg-8 col-md-12">
                                        <div class="test_box">
                                           <i><img src="images/te1.png" alt="#"/></i>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it </p>
+                                          <p>La plataforma para contactar al servicio técnico es muy intuitiva. Me encantó lo fácil que fue reportar mi problema y recibir ayuda rápida </p>
                                           <i class="flot_right"><img src="images/te2.png" alt="#"/></i>
                                        </div>
                                     </div>
