--- a/index.html
+++ b/index.html
@@ -148,22 +148,23 @@ innovadoras para impulsar el crecimiento y la <br> transformación digital de la
                         <div class="col-xl-4 col-lg-4 col-md-4 margin_bott">
                            <div class="classified_box">
                               <figure><img src="images/work_img1.jpg" alt="#"/></figure>
-                              <h3> LAPTOPS Y COMPONENTES </h3>
-                              <p>Variedad de productos como memorias RAM, discos sólidos, tarjetas de video, etc. Todos de la mejor calidad para garantizar el correcto funcionamiento de tus equipos acorde a tus necesidades.</p>
+                              <h3> AnyDesk </h3>
+                              <p> AnyDesk es una herramienta de escritorio remoto que permite acceder y controlar equipos a distancia con bajo consumo de ancho de banda y gran rapidez. Es popular por su baja latencia y rendimiento eficiente incluso en conexiones lentas. <a href="https://anydesk.com/es">AnyDesk</a> </p>
+
                            </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 margin_bott">
                            <div class="classified_box">
                               <figure><img src="images/work_img2.jpg" alt="#"/></figure>
-                              <h3>SERVICIOS EN LA NUBE</h3>
-                              <p>Ofrecemos apoyo en soporte de servicios en la nube para mejorar la escalabilidad de su proyecto. Ofrecemos distintos servicios web o de almacenamiento con las mejor técnicas de seguridad.</p>
+                              <h3>TeamViewer</h3>
+                              <p>TeamViewer es uno de los programas más conocidos para control remoto, soporte técnico, y colaboración en línea. Se utiliza tanto en entornos personales como empresariales gracias a su facilidad de uso y amplia funcionalidad. <a href="https://www.teamviewer.com/latam/?utm_source=google&utm_medium=cpc&utm_campaign=latam%7Cb%7Cpr%7C22%7Coct%7Ctv-core-brand-only-exact-sn%7Cnew%7Ct0%7C0&utm_content=Exact&utm_term=teamviewer&_bt=661279281493&_bm=e&_bn=g&gad_source=1&gclid=CjwKCAiA9vS6BhA9EiwAJpnXw9h-zmadybL4FLuMsLjdqJpOA3ByKLR-Er3-H9f5-wrsAXXVJcoFQRoCA0YQAvD_BwE">TeamViewer</a></p>
                            </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4">
                            <div class="classified_box">
                               <figure><img src="images/work_img3.jpg" alt="#"/></figure>
-                              <h3> SETUP GAMER </h3>
-                              <p>Si buscas no solo potencia, sino también estilo, estás en el lugar indicado. Te ofrecemos las mejores recomendaciones para armar tu PC, añadiendo un plus de diseño y personalidad.</p>
+                              <h3> Chrome Remote Desktop </h3>
+                              <p>Chrome Remote Desktop es una herramienta gratuita de Google que permite el control remoto de computadoras a través del navegador Google Chrome. Es simple, rápido y adecuado para necesidades básicas de acceso remoto. <a href="https://remotedesktop.google.com/?pli=1">Chrome Remote Desktop</a></p>
                            </div>
                         </div>
                      </div>
